--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
@@ -1,17 +1,17 @@
 id: questionAndAnswerSessionDetails
 name: Will you have a question and answer session?
-question: Question and answer session
+question: Session information
 question_advice: |
-  If you run a question and answer session, you must include:
+  If you want to have a question and answer session please outline:
 
   - The type of session you want to run. For example, a webinar, phone conference or meeting.
   - The date and time of your session.
 
   **When to run a question and answer session**
 
-  If your requirements are open for 1 week, you must hold your session within the first 2 working days of publishing.
+  If your brief is open for 1 week, you must hold your session within the first 2 working days of publishing.
 
-  If your requirements are open for 2 weeks, you must hold your session within the first 5 working days of publishing.
+  If your brief is open for 2 weeks, you must hold your session within the first 5 working days of publishing.
 
   **Information you should include**
 
