--- a/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
@@ -1,6 +1,6 @@
 name: What type of digital specialist do you need?
 question: ''
-question_advice:
+question_advice: ''
 type: radios
 options:
   -
