wordings and format

--- a/frameworks/digital-service-professionals/questions/briefs/requirementsLengthSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/requirementsLengthSpecialists.yml
@@ -1,4 +1,4 @@
-name: How long will your requirements will be open for?
+name: How long will your brief will be open?
 question: ''
 id: requirementsLength
 type: radios
