--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -1,11 +1,11 @@
-name: Security clearance
+name: Is security clearance required?
 question: 'Security clearance'
 question_advice: |
   
-  You should only request security clearance if access to classified material, environments or assets is required. 
+  You should only request security clearance if access to classified material, environments or assets is required.
   
   If security clearance is needed, remember you can also apply later on behalf of your specialist.
-  
+
 type: textbox_large
 optional: true
 max_length_in_words: 50
