--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -2,9 +2,9 @@ name: Is security clearance required?
 question: 'Security clearance'
 question_advice: |
   
-  You should only request security clearance if access to classified material, environments or assets is required.
+  You should only request security clearance if this role requires access to classified material, environments or assets.
   
-  If security clearance is needed, remember you can also apply later on behalf of your specialist.
+  If a specialist you choose does not have security clearance, remember you can apply later on their behalf.
 
 type: textbox_large
 optional: true
