--- a/frameworks/g-cloud-8/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-8/messages/contract_variation_1.yml
@@ -1,19 +1,18 @@
 variation_description: |
     The Crown Commercial Service (CCS) proposes to make some minor changes to the framework agreement and call-off 
     contract (reference: RM1557viii-15-07-2016).
-    
-    These minor changes were agreed while G-Cloud 8 was open for applications.
     The changes make it easier for suppliers to work with government and are listed here.
     
-not_agreed_extra: |
+    These minor changes were agreed while G-Cloud 8 was open for applications.
     The changes were not included in the final documents that were signed on behalf of [[SUPPLIER_NAME]].
     
+not_agreed_extra: |
     To put these changes into effect, we need you to review and accept them here.
     You can [download a PDF version of these changes](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-contract-variation.pdf).
 
 confirmation_message: |
     You have accepted the proposed changes. You’ll be notified when they come into effect. 
-    Until then, you must sell your services using the published framework agreement and call-off contract.
+    Until then, you must use the published framework agreement and call-off contract to sell your services.
 
 framework_agreement_changes:
     - 
