--- a/frameworks/digital-service-professionals/questions/briefs/organisation.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/organisation.yml
@@ -1,7 +1,7 @@
 name: Who will the specialist work for? 
 question: 'Department, agency or organisation'
 question_advice: |
-  Please write the name in full incluging your state, if necessary. 
+  Please write in full, including the state if necessary. 
 
   For example, Queensland Department of Education instead of DoE.
 
