--- a/frameworks/digital-service-professionals/questions/briefs/existingTeamSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/existingTeamSpecialists.yml
@@ -1,6 +1,6 @@
 name: Who will the specialist work with?
 id: existingTeam
-question: 'Current team'
+question: 'Existing team'
 question_advice: "Describe the team the specialist will be working with. For example, 'you'll be working with a
 user researcher and a designer.'"
 type: textbox_large
