--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -2,9 +2,9 @@ name: Security clearance
 question: 'Security clearance'
 question_advice: |
   
-  This question is optional. You should only request security clearance if absolutely necessary, as you may restrict the number of specialists who can fulfil your requirements.
+  You should only request security clearance if access to classified material, environments or assets is required. 
   
-  If security clearance is required, remember you can also apply later on behalf of your specialist.
+  If security clearance is needed, remember you can also apply later on behalf of your specialist.
   
 type: textbox_large
 optional: true
