digital-outcome lot

--- a/frameworks/digital-service-professionals/questions/brief-responses/availabilityOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/availabilityOutcomes.yml
@@ -7,7 +7,7 @@ smaller: true
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 validations:
   -
     name: answer_required
