--- a/frameworks/digital-service-professionals/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/essentialRequirements.yml
@@ -7,7 +7,7 @@ number_of_items: 20
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
       - user-research-participants
 validations:
