--- a/frameworks/digital-service-professionals/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/niceToHaveRequirements.yml
@@ -10,7 +10,7 @@ optional: true
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
       - user-research-participants
 validations:
