--- a/frameworks/digital-service-professionals/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/respondToEmailAddress.yml
@@ -9,7 +9,7 @@ limits:
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
       - user-research-participants
 
