--- a/frameworks/digital-service-professionals/questions/brief-responses/supplierName.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/supplierName.yml
@@ -4,6 +4,6 @@ type: text
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
       - user-research-participants
