--- a/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
@@ -6,7 +6,7 @@ optional: true
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
 validations:
   -
