--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -12,7 +12,7 @@ max_length_in_words: 50
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
 validations:
   -
