--- a/frameworks/digital-service-professionals/questions/briefs/startDate.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/startDate.yml
@@ -5,7 +5,7 @@ type: text
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
 validations:
   -
