--- a/frameworks/digital-service-professionals/questions/services/openStandardsPrinciples.yml
+++ b/frameworks/digital-service-professionals/questions/services/openStandardsPrinciples.yml
@@ -8,7 +8,7 @@ type: boolean
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
 
 validations:
