--- a/frameworks/digital-service-professionals/questions/briefs/backgroundInformation.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/backgroundInformation.yml
@@ -8,7 +8,7 @@ max_length_in_words: 100
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 validations:
   -
     name: answer_required
