--- a/frameworks/digital-service-professionals/questions/briefs/culturalFitCriteriaOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/culturalFitCriteriaOutcomes.yml
@@ -7,7 +7,7 @@ question_advice: |
 
   You must tell suppliers if you want to score individual criteria.
 
-  Read more about [how to set evaluation criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
+  Read more about [how to set evaluation criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcome-and-specialists-services#giving-points-to-individual-criteria).
 
   Suggested criteria
 
@@ -20,7 +20,7 @@ number_of_items: 20
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 
 validations:
   -
