--- a/frameworks/digital-service-professionals/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/evaluationTypeOutcomes.yml
@@ -8,7 +8,7 @@ question_advice: |
 
   You can only use the methods you choose here, eg if you don’t select a case study now, you won’t be able to ask for one later.
 
-  Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
+  Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcome-and-specialists-suppliers).
 type: checkboxes
 optional: true
 
@@ -36,7 +36,7 @@ options:
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 validations:
   -
     name: answer_required
