--- a/frameworks/digital-service-professionals/questions/briefs/existingTeamOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/existingTeamOutcomes.yml
@@ -10,7 +10,7 @@ max_length_in_words: 100
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 validations:
   -
     name: answer_required
