--- a/frameworks/digital-service-professionals/questions/briefs/locationOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationOutcomes.yml
@@ -18,7 +18,7 @@ options:
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 validations:
   -
     name: answer_required
