--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
@@ -27,7 +27,7 @@ max_length_in_words: 100
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - user-research-participants
 validations:
   -
