--- a/frameworks/digital-service-professionals/questions/briefs/summary.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/summary.yml
@@ -11,7 +11,7 @@ max_length_in_words: 50
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
       - user-research-participants
 validations:
