--- a/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
@@ -16,14 +16,14 @@ question_advice: |
   
   The points you give for nice-to-have skills and experience must be lower than the points you give for 
   essential skills and experience and proposal criteria.
-  Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
+  Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcome-and-specialists-services#giving-points-to-individual-criteria).
 
 optional: false
 type: multiquestion
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
 questions:
   - essentialRequirementsOutcomes
   - niceToHaveRequirementsOutcomes
