--- a/frameworks/digital-service-professionals/questions/briefs/titleOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/titleOutcomesParticipants.yml
@@ -7,7 +7,7 @@ type: text
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - user-research-participants
 validations:
   -
