--- a/frameworks/digital-service-professionals/questions/services/bespokeSystemInformation.yml
+++ b/frameworks/digital-service-professionals/questions/services/bespokeSystemInformation.yml
@@ -4,7 +4,7 @@ type: boolean
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
+      - digital-outcome
       - digital-professionals
 
 validations:
