--- a/frameworks/digital-service-professionals/questions/services/performanceAnalysisTypes.yml
+++ b/frameworks/digital-service-professionals/questions/services/performanceAnalysisTypes.yml
@@ -2,7 +2,7 @@ question: What types of performance analysis can you provide?
 depends:
   - "on": lot
     being:
-      - digital-outcomes
+      - digital-outcome
 type: checkboxes
 options:
   - label: A/B and multivariate testing
