--- a/frameworks/digital-service-professionals/questions/briefs/titleOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/titleOutcomesParticipants.yml
@@ -1,7 +1,9 @@
 id: title
 name: Title
 question: What you want to call your requirements
-question_advice: This will help you refer to your requirements when talking to suppliers.
+question_advice: Describe the outcome you need in a 100 words or less.
+For example, 'Website redesign and development' or 'Digital maturity assessment'.
+You can update your title later if needed.
 hint: 100 characters maximum
 type: text
 depends:
