--- a/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
@@ -1,4 +1,4 @@
-name: Where in Australia will the work take place?
+name: Where will the work take place?
 question: ''
 id: location
 question_advice: Select the primary location. If the specialist can work anywhere, choose 'Can work remotely'.
