--- a/frameworks/digital-service-professionals/questions/briefs/phase.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/phase.yml
@@ -1,12 +1,9 @@
-name: Current phase
-question: Phase the work is currently in
+name: What phase is the work in?
+question: Current phase
 question_advice: |
-  Read more about [service design phases](https://www.gov.uk/service-manual/phases).
+  Read more about the [service design and delivery process](https://www.dto.gov.au/standard/service-design-and-delivery-process/).
 type: radios
 options:
-  -
-    label: Not applicable
-    value: not_applicable
   -
     label: Not started
     value: not_started
@@ -14,27 +11,28 @@ options:
     label: Discovery
     value: discovery
     description: >
-      A short phase, in which you start researching the needs of your service’s users,
-      find out what you should be measuring, and explore technological or policy-related constraints.
+      Where you research the needs of your service’s users, find out what you should measure and explore technological or policy-related constraints.
   -
     label: Alpha
     value: alpha
     description: >
-      A short phase in which you prototype solutions for your users needs.
-      You’ll be testing with a small group of users or stakeholders, and getting early feedback about the design of
-      the service.
+      Where you prototype solutions to fulfil user needs and test with a small group of users or stakeholders to get early feedback about the design of the service.
   -
     label: Beta
     value: beta
     description: >
-      You’re developing against the demands of a live environment, understanding how to build and scale while meeting
-      user needs. You’ll also be releasing a version to test in public.
+      Where you develop against the demands of a live environment, understanding how to build and scale while meeting user needs. You will also be releasing a version to test in public.
   -
     label: Live
     value: live
     description: >
-      The work doesn’t stop once your service is live. You’ll be iteratively improving your service,
+      The work doesn’t stop once your service is live. In this phase you'll be iteratively improving your service,
       reacting to new needs and demands, and meeting targets set during its development.
+  -
+    label: Other
+    value: other
+    descriptions: >
+      For example, a tech spike or proof of concept.
 depends:
   - "on": "lot"
     being:
