--- a/frameworks/digital-service-professionals/questions/briefs/startDate.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/startDate.yml
@@ -1,6 +1,8 @@
-name: When do you want the specialist to start?
-question: Start date
-question_advice: For example, 31/12/2016
+name: What is the latest start date?
+question: Latest start date
+question_advice: | 
+  For example, 31/12/2016
+  You can exclude sellers who cannot start on the date you set. 
 type: text
 depends:
   - "on": "lot"
