--- a/frameworks/digital-service-professionals/questions/briefs/numberOfSuppliersOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/numberOfSuppliersOutcomes.yml
@@ -1,8 +1,8 @@
-name: Maximum number of suppliers that will be evaluated
+name: How many shortlisted sellers will you evaluate?
 id: numberOfSuppliers
-question: Maximum number of suppliers you’ll evaluate
+question: Number of sellers
 question_advice: |
-  You must evaluate at least 3 suppliers.
+  We recommend evaluating at least 3 sellers.
 
   Read about [how many suppliers you should evaluate](https://www.gov.uk/guidance/how-to-shortlist-digital-outcomes-and-specialists-suppliers#how-many-suppliers-to-evaluate).
 
