--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
@@ -1,12 +1,11 @@
 id: questionAndAnswerSessionDetails
-name: Question and answer session details
-question: Question and answer session details
+name: Will you hold a question and answer session?
+question: Question and answer session information
 question_advice: |
-
-  You must give details of what type of session you want to hold, when it is and any details the attendees need.
-
-  - the type of session you want to run, eg webinar, phone conference or meeting
-  - the date and time of the session (this should happen within 1 week of publishing your requirements)
+  If you wish to have a question and answer session, you must give details of what type of session you want to hold, when it is and any details the attendees need.
+  For example:
+  - the type of session you want to run, such as a webinar, phone conference or meeting
+  - the date and time of the session (this should happen within 1 week of publishing your brief)
 
   Depending on the type of session you choose, you could also include:
 
@@ -17,9 +16,9 @@ question_advice: |
   - the address (including postcode)
   - anything else needed to take part
 
-  This information will only be available to eligible suppliers who have logged in.
+  This information will only be available to eligible sellers who have logged in.
 
-  You must post all questions and answers on the Digital Marketplace so all suppliers can see them.
+  After the session you must post all questions and answers on the Digital Marketplace so all suppliers can see them.
 
 optional: true
 type: textbox_large
