--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
@@ -2,13 +2,12 @@ id: questionAndAnswerSessionDetails
 name: Will you hold a question and answer session?
 question: Question and answer session information
 question_advice: |
-   Providing a question and answer session is optional but it means you can explain your needs and answer questions quickly.
+   "Providing a question and answer session is optional but it means you can explain your needs and answer questions quickly.
    If you wish to have a question and answer session, provide the details here. For example:
    - the type of session you want to run, such as a webinar, phone conference or meeting
    - the date and time of the session (this should happen within 1 week of publishing your brief)
 
   Depending on the type of session, you could also include:
-
    - software needed
    - the url
    - the phone number
@@ -18,7 +17,7 @@ question_advice: |
 
   This information will only be available to eligible sellers who have logged in.
 
-  After the session you must add all questions and answers to your published brief so all suppliers can see them.
+  After the session you must add all questions and answers to your published brief so all suppliers can see them."
 
 optional: true
 type: textbox_large
