--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
@@ -26,7 +26,7 @@ question_advice: |
 
   This information will only be available to eligible suppliers who have logged in.
 
-  After the session, post all questions and answers to your brief page for all suppliers to see.
+  After the session, post all questions and answers to your brief page for all sellers to see.
 
 optional: true
 type: textbox_large
