--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
@@ -2,15 +2,9 @@ id: questionAndAnswerSessionDetails
 name: Will you have a question and answer session?
 question: Question and answer session information
 question_advice: |
-
-   Providing a question and answer session is optional but it means you can explain your needs and answer questions quickly.
-   
-   If you want to have a question and answer session please outline:
-
-  - The type of session you want to run. For example, a webinar, phone conference or meeting.
+   "If you want to hold a question and answer session please outline:
+  - The type of session you want to run — for example, a webinar, phone conference or meeting.
   - The date and time of your session.
-
-  **Information you should include**
 
   Depending on the type of session you choose, you could also include:
 
@@ -23,7 +17,7 @@ question_advice: |
 
   This information will only be available to eligible suppliers who have logged in.
 
-  After the session, post all questions and answers to your brief page for all suppliers to see.
+  After the session, post all questions and answers to your requirements brief for all suppliers to see."
 
 optional: true
 type: textbox_large
