--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
@@ -3,7 +3,7 @@ name: Will you have a question and answer session?
 question: Session information
 question_advice: |
   If you want to hold a question and answer session you should describe: 
-  - the type of session — for example a webinar, phone conference or meeting
+  - the type of session. For example, a webinar, phone conference or meeting
   - the date and time of your session
   
   You could also include:
