--- a/frameworks/digital-service-professionals/questions/briefs/organisation.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/organisation.yml
@@ -1,5 +1,5 @@
 name: Who will the specialist work for? 
-question: 'Department, agency or organisation'
+question: Department, agency or organisation
 question_advice: |
   Please write in full, including the state if necessary. 
 
