--- a/frameworks/digital-service-professionals/questions/briefs/specialistWork.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specialistWork.yml
@@ -1,11 +1,10 @@
 name: What will the specialist do?
-question: 'Work summary'
+question: Work summary
 question_advice: |
   List all tasks you want the specialist to do.
 
   For example:
-
-    - Front-end development on DTO website.
+    - Front-end development on the DTO website.
     - Implement toolkits and APIs to optimise performance.
 type: textbox_large
 max_length_in_words: 100
