--- a/frameworks/digital-service-professionals/questions/briefs/workplaceAddress.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/workplaceAddress.yml
@@ -1,8 +1,7 @@
 name: Where will the work take place?
 question: Workplace address
 question_advice: |
-
-  If you don't have the full address please add at least the city or town. You can include more than one location.
+  If you don't have the full address, please add at least the city or town. You can include more than one location.
 type: textbox_large
 max_length_in_words: 100
 depends:
