--- a/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
@@ -4,7 +4,7 @@ question_advice: |
 
   All suppliers in the Digital Marketplace have already agreed to the terms and conditions in the [Deed of Standing Offer](https://www.gov.au/marketplace/static/media/documents/DSPP_Deed_of_Standing_Offer.pdf).
 
-  However, if you need to set out any additional terms and conditions, you can do so here.
+  If you need to set out any additional terms and conditions, you can do so here.
 
 optional: true
 type: textbox_large
