--- a/frameworks/digital-service-professionals/questions/briefs/summary.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/summary.yml
@@ -1,7 +1,7 @@
 name: Write a summary of your brief
 question: Summary
 question_advice: |
-  This will be the first thing sellers see when browsing opportunities. 
+  This will be the first thing sellers see when looking for new opportunities. 
   
   It will help them decide whether or not to view your brief in full.
 type: textbox_large
