--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -4,7 +4,7 @@ question_advice: |
   
   Only request security clearance if access to classified material, environments or assets is required.
   
-  If security clearance is required, specify which type or types here.
+  If security clearance is required, specify the type here.
   
 type: textbox_large
 optional: true
