--- a/frameworks/digital-service-professionals/questions/briefs/specifySellerText.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specifySellerText.yml
@@ -3,6 +3,7 @@ name: ''
 question: 'Enter supplier email address'
 question_advice: ''
 type: text
+optional: true
 depends:
   - "on": "lot"
     being:
