--- a/frameworks/digital-service-professionals/questions/briefs/specifySellerRadio.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specifySellerRadio.yml
@@ -1,5 +1,5 @@
 name: ''
-question: ''
+question: 'Seller Selection'
 id: sellerSelector
 question_advice: ''
 type: radios
@@ -8,17 +8,17 @@ options:
     label: All qualified sellers
     value: allSellers
     description: >
-      Send it to all.
+      Publish on the Digital Marketplace.
   -
     label: Specify a list of sellers
     value: someSellers
     description: >
-      Select multiple.
+      Send directly to sellers of your choice.
   -
     label: Specify an individual seller
     value: oneSeller
     description: >
-      Select one.
+      Send directly to one seller.
 depends:
   - "on": "lot"
     being:
