validation msg fix

--- a/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
@@ -1,5 +1,5 @@
 name: What type of digital specialist do you need?
-question: ''
+question: 'Specialist Role'
 question_advice: ''
 type: radios
 options:
