validation msg fix

--- a/frameworks/digital-service-professionals/questions/briefs/specifySeller.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specifySeller.yml
@@ -1,5 +1,5 @@
 name: Who can respond to your brief?
-question: 'Specify Seller'
+question: 'Seller Selection'
 question_advice: ''
 optional: false
 type: multiquestion
