--- a/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -1,11 +1,14 @@
-name: Technical competence
+name: Evaluation criteria
 question: ''
 question_advice: |
 
-  Evaluate specialists’ technical competence using criteria for:
-
-  - essential skills and experience
-  - nice-to-have skills and experience
+  Consider the relevant financial and non-financial costs and benefits including, but not limited to: 
+  — the quality of the goods and services
+  — fitness for purpose of the proposal
+  — the potential supplier’s relevant experience and performance history
+  — flexibility of the proposal (including innovation and adaptability over the lifecycle of the procurement) 
+  — environmental sustainability of the proposed goods and services (such as energy efficiency and environmental impact) 
+  — whole-of-life costs. 
 
 optional: false
 type: multiquestion
@@ -17,4 +20,4 @@ questions:
   - essentialRequirementsSpecialists
   - niceToHaveRequirementsSpecialists
 
-empty_message: Set technical competence criteria
+empty_message: Set evaluation criteria
