--- a/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -3,12 +3,12 @@ question: ''
 question_advice: |
 
   Consider the relevant financial and non-financial costs and benefits including, but not limited to: 
-  — the quality of the goods and services
-  — fitness for purpose of the proposal
-  — the potential supplier’s relevant experience and performance history
-  — flexibility of the proposal (including innovation and adaptability over the lifecycle of the procurement) 
-  — environmental sustainability of the proposed goods and services (such as energy efficiency and environmental impact) 
-  — whole-of-life costs. 
+  - the quality of the goods and services
+  - fitness for purpose of the proposal
+  - the potential supplier’s relevant experience and performance history
+  - flexibility of the proposal (including innovation and adaptability over the lifecycle of the procurement) 
+  - environmental sustainability of the proposed goods and services (such as energy efficiency and environmental impact) 
+  - whole-of-life costs. 
 
 optional: false
 type: multiquestion
