--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -2,37 +2,42 @@ name: Cultural fit criteria
 id: culturalFitCriteria
 question: Cultural fit criteria
 question_advice: |
-  Cultural fit is about how well you and the supplier work together.
 
-  #Cultural fit is how suppliers:
+  Cultural fit is about how well you and the specialist work together. 
 
-  - work with other people
-  - solve problems
-  - make decisions
-  - share knowledge and experience
-  - deal with making mistakes
+  #Cultural fit is:
+  - how the specialist works with other people
+  - how the specialist solves problems
+  - the specialist’s approach to making decisions
+  - how the specialist shares knowledge and experience
+  - the specialist’s attitude to making mistakes
 
-  #Cultural fit isn’t whether suppliers:
-
-  - look, talk or behave in the same way as you
-  - have agile skills – that’s technical competence
+  #Cultural fit isn’t:
+  - whether the specialist looks, talks or behaves in the same way as you
+  - about having agile skills – that’s technical competence
 
   #Giving points for individual criteria (optional)
   You can give points to individual criteria, eg ‘transparent and collaborative when making decisions – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
 
+  #Add cultural fit criteria
+  When you evaluate shortlisted specialists on cultural fit, you must use the criteria you list here.
+
+
   #Suggested criteria
 
-  - Work as a team with our organisation and other suppliers
-  - Transparent and collaborative when making decisions
+  - Work as a team with our organisation and other specialists
+  - Be transparent and collaborative when making decisions
   - Have a no-blame culture and encourage people to learn from their mistakes
-  - Take responsibility for your work
+  - Take responsibility for their work
   - Share knowledge and experience with other team members
   - Challenge the status quo
-  - Be comfortable standing up for your discipline
-  - Able to work with clients with low technical expertise
+  - Be comfortable standing up for their discipline
+  - Can work with clients with low technical expertise
 
+
+  **The specialist should:**
 
 type: list
 number_of_items: 20
