--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaOutcomes.yml
@@ -44,7 +44,7 @@ number_of_items: 20
 depends:
   - "on": "lot"
     being:
-      - digital-specialists
+      - digital-outcomes
 
 validations:
   -
