--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -27,7 +27,7 @@ question_advice: |
 
   #Suggested criteria
 
-  - Work as a team with our organisation and other specialists
+  - Work as a team with our organisation and other suppliers
   - Be transparent and collaborative when making decisions
   - Have a no-blame culture and encourage people to learn from their mistakes
   - Take responsibility for their work
