--- a/frameworks/digital-service-professionals/questions/briefs/organisation.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/organisation.yml
@@ -3,7 +3,7 @@ question: Department, agency or organisation
 question_advice: |
   Please write in full, including the state if necessary. 
 
-  For example, Queensland Department of Education instead of DoE.
+  For example, Department of Human Services instead of DHS.
 
 hint: 100 characters maximum
 type: text
