--- a/frameworks/digital-service-professionals/questions/briefs/budgetRangeOutcomesParticipants.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/budgetRangeOutcomesParticipants.yml
@@ -2,9 +2,7 @@ name: Budget range
 id: budgetRange
 question: Budget range
 question_advice: |
-  Sellers find it helpful if you can provide a breakdown of costs. 
-
-  You can contact sellers before creating your brief to estimate how much the work may cost.
+  Sellers find it helpful if you can provide estimated budget. 
 
   Make sure you have budget approval before publishing your brief.
 
